Fixed iOS scroll bounce

--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
 				margin: 0px;
 				overflow: hidden;
 			}
+
+			html {
+			  position: fixed;
+			  height: 100%;
+			  overflow: hidden;
+			}
+
+			body {
+			  width: 100vw;
+			  height: 100vh;
+			  overflow-y: hidden;
+			  overflow-x: hidden;
+			  -webkit-overflow-scrolling: touch;
+			}
 		</style>
 	</head>
 	<body>
