--- a/index.html
+++ b/index.html
@@ -42,6 +42,50 @@
 			.muted .muteButton {
 				background-image: url('baseline-volume_off-24px.svg')
 			}
+
+			.overlay {
+				position: fixed;
+				left: 0;
+			    top: 0;
+			    width: 100%;
+			    height: 100%;
+				background: rgba(0,0,0,0.8);
+				color: #fff;
+
+				transition: all 0.3s ease-in;
+			}
+
+			.overlay.closed {
+				opacity: 0;
+				background: rgba(0,0,0,0.0);
+				transform: scaleX(0) scaleY(0) translateY(120vh);
+			}
+
+			.dialog {
+				position: absolute;
+			    left: 50%;
+			    top: 50%;
+			    margin: -150px 0 0 -120px;
+			    width: 240px;
+			    height: 300px;
+			}
+
+			.dialog button {
+				margin-top: 5px;
+				border: solid 1px #fff;
+			    background: #ffffff;
+			    color: #000;
+			    padding: 7px 20px;
+			    /* text-transform: uppercase; */
+			    font-variant: small-caps;
+			}
+
+			.dialog button:hover,
+			.dialog button:active {
+			    background: #000;
+			    color: #fff;
+			}
+
 		</style>
 	</head>
 	<body>
@@ -50,6 +94,15 @@
 
 		</div>
 		<button id="muteButton" class="muteButton">Mute volume</button>
+
+		<div id="intro" class="overlay">
+			<div class="dialog">
+				<h2>dreamsynth</h2>
+				<p>I saw this in a dream</p>
+				<p>Please unmute your speakers and enjoy.</p>
+				<button class="start" id="startButton">Begin</button>
+			</div>
+		</div>
 			
 
 		<script>
@@ -86,6 +139,36 @@
 
 
 	
+
+
+
+
+		<script>
+			// UI
+			var muteButton = document.getElementById('muteButton');
+			muteButton.addEventListener('click', function (ev) {
+				var isMuted = Tone.Master.mute = !Tone.Master.mute;
+				if (isMuted) {
+					document.body.className += ' muted';
+				} else {
+					document.body.className = document.body.className.replace(' muted', '');
+				}
+			});
+
+			var isIntroClosed = false,
+				intro = document.getElementById('intro'),
+				startButton = document.getElementById('startButton');
+			startButton.addEventListener('click', function(ev) {
+				intro.className += ' closed';
+				isIntroClosed = true;
+			});
+
+
+			StartAudioContext(Tone.context, startButton, function() {debugPrint('auto started')});
+
+		</script>
+
+
 
 
 
@@ -261,12 +344,13 @@
 
 				water.material.uniforms.time.value += 1.0 / 60.0;
 
-
-				parameters.inclination -= 0.000036;
-				if (parameters.inclination < -0.5) {
-					parameters.inclination = 0.51;
+				if (isIntroClosed) {
+					parameters.inclination -= 0.000036;
+					if (parameters.inclination < -0.5) {
+						parameters.inclination = 0.51;
+					}
+					updateSun();
 				}
-				updateSun();
 			}
 
 			init();
@@ -279,25 +363,6 @@
 
 
 		</script>
-
-
-
-
-		<script>
-			var muteButton = document.getElementById('muteButton');
-			muteButton.addEventListener('click', function (ev) {
-				var isMuted = Tone.Master.mute = !Tone.Master.mute;
-				if (isMuted) {
-					document.body.className += ' muted';
-				} else {
-					document.body.className = document.body.className.replace(' muted', '');
-				}
-			});
-
-
-		</script>
-
-
 
 
 
@@ -406,8 +471,6 @@
 				// }
 
 				rebuild();
-
-				StartAudioContext(Tone.context, muteButton, function() {debugPrint('auto started')});
 
 				document.addEventListener( 'mousemove', onDocumentMouseMove, false );
 				document.addEventListener( 'touchstart', onDocumentMouseMove, false );
