--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 		<script src="dreamsynth/synth.js"></script>
 		<script src="dreamsynth/palettes.js"></script>
 		<script src="dreamsynth/dreamsynth.js"></script>
+		<script src="dreamsynth/loops.js"></script>
 
 
 	
