--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
 			}
 
 			function onDocumentMouseMove( event ) {
-				debugPrint("onDocumentMouseMove ", event);
+				// debugPrint("onDocumentMouseMove ", event);
 					
 				var clientX, clientY;
 				if (event.touches) {
