really add objloader 1

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 		<script src="js/three.js"></script>
 
 		<script src="js/loaders/MTLLoader.js"></script>
-		<script src="js/loaders/OBJLoader2.js"></script>
+		<script src="js/loaders/OBJLoader.js"></script>
 
 		<script src="js/controls/OrbitControls.js"></script>
 
