Fixed radius, scales

--- a/index.html
+++ b/index.html
@@ -640,29 +640,35 @@
 			function initBoats() {
 				var boatFiles = [
 					{ 
-						'assetPath': 'models/boat',
-						'mtlFile': 'Boat Texture 1.mtl',
-						'objFile': 'Boat Texture 1.obj'
-					},
-					{ 
-						'assetPath': 'models/blimp',
-						'mtlFile': 'CUPIC_BLIMP.mtl',
-						'objFile': 'CUPIC_BLIMP.obj'
-					},
-					{ 
 						'assetPath': 'models/lighthouse',
 						'mtlFile': 'Lighthouse.mtl',
 						'objFile': 'Lighthouse.obj',
+						scale: 3
+					},
+					{ 
+						'assetPath': 'models/boat',
+						'mtlFile': 'Boat Texture 1.mtl',
+						'objFile': 'Boat Texture 1.obj',
+						scale: 0.045
 					},
 					{ 
 						'assetPath': 'models/sailboat',
 						'mtlFile': '1368 Sailboat.mtl',
-						'objFile': '1368 Sailboat.obj'
+						'objFile': '1368 Sailboat.obj',
+						scale: 0.9
 					},
 					{ 
 						'assetPath': 'models/submarine',
 						'mtlFile': 'submarine.mtl',
-						'objFile': 'submarine.obj'
+						'objFile': 'submarine.obj',
+						scale: 8
+					},
+					{ 
+						'assetPath': 'models/blimp',
+						'mtlFile': 'CUPIC_BLIMP.mtl',
+						'objFile': 'CUPIC_BLIMP.obj',
+						scale: 0.07,
+						y: 250
 					}
 				];
 
