Boats don’t float above the water!

--- a/index.html
+++ b/index.html
@@ -649,13 +649,15 @@
 						'assetPath': 'models/boat',
 						'mtlFile': 'Boat Texture 1.mtl',
 						'objFile': 'Boat Texture 1.obj',
-						scale: 0.045
+						scale: 0.045,
+						y: -2
 					},
 					{ 
 						'assetPath': 'models/sailboat',
 						'mtlFile': '1368 Sailboat.mtl',
 						'objFile': '1368 Sailboat.obj',
-						scale: 0.9
+						scale: 0.9,
+						y: -6
 					},
 					{ 
 						'assetPath': 'models/submarine',
