Rotate boats to face forward

--- a/index.html
+++ b/index.html
@@ -653,27 +653,31 @@
 						'mtlFile': 'Boat Texture 1.mtl',
 						'objFile': 'Boat Texture 1.obj',
 						scale: 0.045,
-						y: -2
+						y: -2,
+						rotation: 4
 					},
 					{ 
 						'assetPath': 'models/sailboat',
 						'mtlFile': '1368 Sailboat.mtl',
 						'objFile': '1368 Sailboat.obj',
 						scale: 0.9,
-						y: -6
+						y: -6,
+						rotation: 6
 					},
 					{ 
 						'assetPath': 'models/submarine',
 						'mtlFile': 'submarine.mtl',
 						'objFile': 'submarine.obj',
-						scale: 8
+						scale: 8,
+						rotation: 6
 					},
 					{ 
 						'assetPath': 'models/blimp',
 						'mtlFile': 'CUPIC_BLIMP.mtl',
 						'objFile': 'CUPIC_BLIMP.obj',
 						scale: 0.07,
-						y: 250
+						y: 250,
+						rotation: 4
 					}
 				];
 
@@ -694,6 +698,8 @@
 					BRANCH_LENGTH : BRANCH_LENGTH,
 
 					TWEET_TREE_Y: TWEET_TREE_Y,
+
+					MODEL_ROTATION: MODEL_ROTATION,
 
 					//showHelpers: false,
 					cameraX: camera.position.x, 
