Tried to make loading animation smoother. Chrome doesn’t do it right.

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
 			    background-size: 100% 100%;
 			    animation: loadingbar 140s;
 
+			    transition: background-size 0.3s ease-in;
+
 			    color: #000;
 			    padding: 7px 20px;
 			    /* text-transform: uppercase; */
@@ -95,7 +97,8 @@
 			}
 
 			.loaded .dialog button {
-				animation-duration: 1.3s;
+				animation-duration: 0.3s;
+				background-size: 100% 100%;
 			}
 
 			.loaded .dialog button:hover,
