--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>websynth - odbol</title>
+		<title>dreamsynth - odbol</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+
+		<meta property="og:url"                content="http://odbol.com/dreamsynth" />
+		<meta property="og:title"              content="dreamsynth" />
+		<meta property="og:description"        content="I saw this in a dream. Then I made it into a musical instrument." />
+		<meta property="og:image"              content="http://odbol.com/dreamsynth/dreamsynth-screenshot.jpg" />
+
 		<style>
 			body {
 				font-family: Monospace;
