A11y: added keyboard support

--- a/index.html
+++ b/index.html
@@ -198,6 +198,9 @@
 			}
 
 		</style>
+
+		<link rel="stylesheet" href="a11y/A11yHelper.css" />
+
 	</head>
 	<body class="loading">
 
@@ -255,6 +258,7 @@
 
 
 		<script src="js/three.js"></script>
+		<script src="a11y/A11yHelper.js"></script>
 
 		<script src="js/loaders/MTLLoader.js"></script>
 		<script src="js/loaders/OBJLoader.js"></script>
@@ -902,6 +906,8 @@
 				];
 
 				boats = new Boats(scene, loops, boatFiles, decrementLoadingItems, incrementLoadingItems);
+
+
 
 			}
 
