Move tween.js to local

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       var fxrand = sfc32(...hashes)
       //---- /do not edit the following code
     </script>
-	
+
 		<style>
 			body {
 				font-family: Monospace;
@@ -292,7 +292,7 @@
 		<script src="js/libs/dat.gui.min.js"></script>
 		<script src="js/libs/stats.min.js"></script>
 
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/tween.js/16.3.5/Tween.min.js"></script>
+		<script src="js/libs/Tween.min.js"></script>
 
 		<script src="js/objects/Water.js"></script>
 		<script src="js/objects/Sky.js"></script>
