Water size bigger

--- a/index.html
+++ b/index.html
@@ -425,6 +425,7 @@
 				water.rotation.x = - Math.PI / 2;
 
 				scene.add( water );
+				water.material.uniforms.size.value = 0.1;
 
 				// Skybox
 
